--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.9.0",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "motion": "^12.23.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
